--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner:wght@400..700&family=Kode+Mono&family=Nunito+Sans:ital,opsz,wdth,wght@0,6..12,82.2,200..1000;1,6..12,82.2,200..1000&family=Paprika&family=Poiret+One&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --font-family: cursive;
+
+  --gradient-text: linear-gradient(89.97deg, #fff 1.84%, #3538ec);
+  --gradient-bar: linear-gradient(89.97deg, #fff 1.84%, #3538ec);
+
+  --color-bg: #040c18;
+  --color-footer: #042c54;
+  --color-blog: #042c54;
+  --color-text: #81afdd;
+  --color-subtext: #ff8a71;
 }
